# cowboy

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.claude/skills/release/: SKILL.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v2.1-MILESTONE-AUDIT.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md
.planning/phases/02-claude-code-ingestion/: 02-02-SUMMARY.md  02-03-SUMMARY.md
.planning/phases/03-api-core-dashboard/: 03-01-SUMMARY.md  03-02-SUMMARY.md  03-03-SUMMARY.md
.planning/phases/04-conversation-browser/: 04-01-SUMMARY.md  04-03-SUMMARY.md
.planning/phases/05-real-time-updates/: 05-01-SUMMARY.md  05-02-SUMMARY.md
.planning/phases/06-cursor-integration-agent-comparison/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-VERIFICATION.md
.planning/phases/07-advanced-analytics/: 07-01-SUMMARY.md  07-03-SUMMARY.md
.planning/phases/08-plan-tracking/: 08-01-SUMMARY.md  08-02-SUMMARY.md  08-03-SUMMARY.md
.planning/phases/09-settings-remote-sync/: 09-02-SUMMARY.md  09-03-SUMMARY.md
.planning/phases/13-visual-polish/: 13-01-SUMMARY.md
.planning/phases/14-ingestion-quality/: 14-02-SUMMARY.md
.planning/phases/15-cursor-data-quality/: 15-01-SUMMARY.md  15-02-SUMMARY.md
.planning/phases/16-message-display/: 16-02-SUMMARY.md
.planning/phases/17-cost-calculation-fixes/: 17-01-PLAN.md  17-01-SUMMARY.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: diff-backends.sh  diff-ingestion.sh  release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  conversations.rs  db.rs  error.rs  extractors.rs  lib.rs  plans.rs  pricing.rs  schema.sql  server.rs  settings.rs  watcher.rs  websocket.rs
src-tauri/src/ingestion/: claude_code_parser.rs  compaction_utils.rs  cursor_file_discovery.rs  cursor_normalizer.rs  cursor_parser.rs  file_discovery.rs  id_generator.rs  migration.rs  mod.rs  normalizer.rs  plan_extractor.rs  snapshot.rs  subagent_linker.rs  subagent_summarizer.rs  title_utils.rs  types.rs
(+239 files in other folders)
